mongodb/deployment-mongodb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb
  namespace: airbnb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongodb
    spec:
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: mongodb
          ports:
            - containerPort: 27017
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          terminationMessagePolicy: File
          image: mongo
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
