mongodb/service-mongo-express-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo-express-service
  namespace: airbnb
spec:
  clusterIP: 172.30.84.132
  ipFamilies:
    - IPv4
  ports:
    - name: mongo-express
      protocol: TCP
      port: 8081
      targetPort: 8081
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.84.132
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: mongo-express
